--- a/WinForms/WinForms/WinForms.csproj
+++ b/WinForms/WinForms/WinForms.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DeathDynamicCalculator\DeathDynamicCalculator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
