Made some changes

--- a/WinForms/Tests/Tests.csproj
+++ b/WinForms/Tests/Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DeathDynamicCalculator\DeathDynamicCalculator.csproj" />
+    <ProjectReference Include="..\DeathDynamicCalculator\DynamicCalculator.csproj" />
   </ItemGroup>
 
 </Project>
